# learn-cpp

./: .clang-format  .gitignore  CPPLINT.cfg  LICENSE  README.md  build.sh  run.sh  user.flags
callback-function/: main.cpp
cmake-install-windows/: README.md  build-vs2019.bat  build-vs2022.bat  build.sh
cmake-install-windows/foo/include/foo/: foo_export.h
cmake-install-windows/src/: main.cpp
coding/a2i-function/: main.cpp
coding/list/merge-list/: main.cpp
coding/list/reverse-list/: main.cpp
core-dump/: build.sh  main.cpp  readme.md
design-patterns-cpp/: README.md
design-patterns-cpp/iterator/: ContainerIterator.cpp
design-patterns-cpp/prototype/: SmartPtrPrototype.cpp
format/: CMakeLists.txt  build.bat  build.sh  main.cpp
game/: main.cpp
gflags/: main.cpp
glog-gflags/: CMakeLists.txt  elapsed_time.h  main.cpp  timer.hpp
gtest/: CMakeLists.txt  README.md  build.sh  gpt_soluation.md
gtest/src/: CMakeLists.txt  example.cpp  example.h
gtest/test/: example_add.cpp  example_subtract.cpp
python/: dealtxt.py
python-cpp/: build.sh  c_python.cc  c_python.py
thread-pool/: CMakeLists.txt  README.md  ThreadPool.h  main.cpp
timer/: CMakeLists.txt  build.bat  timer-20ms.cpp  timer.hpp
